--- a/package.json
+++ b/package.json
@@ -21,20 +21,24 @@
   },
   "dependencies": {
     "@iconify-json/lucide": "^1.2.20",
+    "@nuxt/image": "1.8.1",
     "@nuxt/ui": "3.0.0-alpha.9",
-    "nuxt": "^3.15.0"
+    "@pinia/nuxt": "0.9.0",
+    "@vueuse/nuxt": "12.3.0",
+    "nuxt": "^3.15.0",
+    "pinia": "^2.3.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
-    "@nuxt/devtools": "latest",
+    "@nuxt/devtools": "^1.7.0",
     "@nuxt/eslint": "^0.7.4",
     "@nuxt/test-utils": "^3.15.1",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "happy-dom": "^16.3.0",
+    "happy-dom": "^15.0.0",
     "husky": "^9.1.7",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
