--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@iconify-json/lucide": "^1.2.20",
     "@nuxt/image": "1.8.1",
     "@nuxt/ui": "3.0.0-alpha.9",
     "@pinia/nuxt": "0.9.0",
+    "@sentry/nuxt": "^8.47.0",
     "@vueuse/nuxt": "12.3.0",
     "nuxt": "^3.15.0",
     "pinia": "^2.3.0"
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
+    "@iconify-json/lucide": "^1.2.20",
     "@nuxt/devtools": "^1.7.0",
     "@nuxt/eslint": "^0.7.4",
     "@nuxt/test-utils": "^3.15.1",
@@ -40,6 +41,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "happy-dom": "^15.0.0",
     "husky": "^9.1.7",
+    "import-in-the-middle": "^1.12.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
     "typescript": "^5.7.2",
