--- a/package.json
+++ b/package.json
@@ -35,15 +35,26 @@
     "@nuxt/devtools": "^1.7.0",
     "@nuxt/eslint": "^0.7.4",
     "@nuxt/test-utils": "^3.15.1",
+    "@nuxtjs/storybook": "^8.3.3",
+    "@storybook-vue/nuxt": "^8.3.3",
+    "@storybook/addon-essentials": "^8.4.7",
+    "@storybook/addon-interactions": "^8.4.7",
+    "@storybook/addon-links": "^8.4.7",
+    "@storybook/blocks": "^8.4.7",
+    "@storybook/builder-vite": "^8.4.7",
+    "@storybook/test": "^8.4.7",
+    "@storybook/vue3": "^8.4.7",
+    "@types/node": "^22.10.5",
     "@vue/test-utils": "^2.4.6",
     "eslint": "^9.17.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "happy-dom": "^15.0.0",
+    "happy-dom": "^15",
     "husky": "^9.1.7",
     "import-in-the-middle": "^1.12.0",
     "prettier": "^3.4.2",
     "prettier-plugin-tailwindcss": "^0.6.9",
+    "storybook": "^8.4.7",
     "typescript": "^5.7.2",
     "vitest": "^2.1.8"
   }
