--- a/package.json
+++ b/package.json
@@ -15,47 +15,40 @@
     "check": "pnpm lint && pnpm test && pnpm build",
     "test": "vitest run",
     "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage",
-    "storybook": "storybook dev --port 6006",
-    "build-storybook": "storybook build"
+    "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@nuxt/image": "1.8.1",
+    "@nuxt/image": "1.9.0",
     "@nuxt/ui": "3.0.0-alpha.9",
-    "@pinia/nuxt": "0.9.0",
-    "@sentry/nuxt": "^8.47.0",
-    "@vueuse/nuxt": "12.3.0",
-    "nuxt": "^3.15.0",
-    "pinia": "^2.3.0"
+    "@pinia/nuxt": "0.10.1",
+    "@vueuse/nuxt": "12.8.2",
+    "nuxt": "^3.15.4",
+    "pinia": "^3.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.6.1",
-    "@commitlint/config-conventional": "^19.6.0",
-    "@iconify-json/lucide": "^1.2.20",
-    "@nuxt/devtools": "^1.7.0",
-    "@nuxt/eslint": "^0.7.4",
-    "@nuxt/test-utils": "^3.15.1",
-    "@nuxtjs/storybook": "^8.3.3",
-    "@storybook-vue/nuxt": "^8.3.3",
-    "@storybook/addon-essentials": "^8.4.7",
-    "@storybook/addon-interactions": "^8.4.7",
-    "@storybook/addon-links": "^8.4.7",
-    "@storybook/blocks": "^8.4.7",
-    "@storybook/builder-vite": "^8.4.7",
-    "@storybook/test": "^8.4.7",
-    "@storybook/vue3": "^8.4.7",
-    "@types/node": "^22.10.5",
+    "@commitlint/cli": "^19.7.1",
+    "@commitlint/config-conventional": "^19.7.1",
+    "@iconify-json/lucide": "^1.2.28",
+    "@nuxt/devtools": "^2.2.1",
+    "@nuxt/eslint": "^1.1.0",
+    "@nuxt/test-utils": "^3.17.1",
+    "@types/node": "^22.13.9",
     "@vue/test-utils": "^2.4.6",
-    "eslint": "^9.17.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "happy-dom": "^15",
+    "eslint": "^9.21.0",
+    "eslint-config-prettier": "^10.0.2",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-typegen": "^2.0.0",
+    "happy-dom": "^17.2.2",
     "husky": "^9.1.7",
-    "import-in-the-middle": "^1.12.0",
-    "prettier": "^3.4.2",
-    "prettier-plugin-tailwindcss": "^0.6.9",
-    "storybook": "^8.4.7",
-    "typescript": "^5.7.2",
-    "vitest": "^2.1.8"
+    "playwright-core": "^1.50.1",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "typescript": "^5.7.3",
+    "vitest": "^3.0.7"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "sharp"
+    ]
   }
 }
