--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
   },
   "dependencies": {
     "@nuxt/image": "1.9.0",
-    "@nuxt/ui": "3.0.0-alpha.9",
+    "@nuxt/ui": "3.0.0-beta.2",
     "@pinia/nuxt": "0.10.1",
     "@vueuse/nuxt": "12.8.2",
-    "nuxt": "^3.15.4",
+    "nuxt": "3.15.1",
     "pinia": "^3.0.1"
   },
   "devDependencies": {
