--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@pinia/nuxt": "0.10.1",
     "@vueuse/nuxt": "12.8.2",
     "nuxt": "3.15.1",
+    "ohash": "1.1.5",
     "pinia": "^3.0.1"
   },
   "devDependencies": {
@@ -37,7 +38,6 @@
     "eslint": "^9.21.0",
     "eslint-config-prettier": "^10.0.2",
     "eslint-plugin-prettier": "^5.2.3",
-    "eslint-typegen": "^2.0.0",
     "happy-dom": "^17.2.2",
     "husky": "^9.1.7",
     "playwright-core": "^1.50.1",
