--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rindu-starter",
   "private": true,
   "type": "module",
-  "packageManager": "pnpm@9.15.0",
+  "packageManager": "pnpm@10.4.0",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -19,32 +19,31 @@
   },
   "dependencies": {
     "@nuxt/image": "1.9.0",
-    "@nuxt/ui": "3.0.0-beta.2",
+    "@nuxt/ui": "^3.0.0",
     "@pinia/nuxt": "0.10.1",
     "@vueuse/nuxt": "12.8.2",
-    "nuxt": "3.15.1",
-    "ohash": "1.1.5",
+    "nuxt": "^3.16.0",
     "pinia": "^3.0.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.7.1",
-    "@commitlint/config-conventional": "^19.7.1",
-    "@iconify-json/lucide": "^1.2.28",
-    "@nuxt/devtools": "^2.2.1",
-    "@nuxt/eslint": "^1.1.0",
-    "@nuxt/test-utils": "^3.17.1",
-    "@types/node": "^22.13.9",
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@iconify-json/lucide": "^1.2.30",
+    "@nuxt/devtools": "^2.3.0",
+    "@nuxt/eslint": "^1.2.0",
+    "@nuxt/test-utils": "^3.17.2",
+    "@types/node": "^22.13.10",
     "@vue/test-utils": "^2.4.6",
-    "eslint": "^9.21.0",
-    "eslint-config-prettier": "^10.0.2",
+    "eslint": "^9.22.0",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.3",
-    "happy-dom": "^17.2.2",
+    "happy-dom": "^17.4.4",
     "husky": "^9.1.7",
-    "playwright-core": "^1.50.1",
+    "playwright-core": "^1.51.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript": "^5.7.3",
-    "vitest": "^3.0.7"
+    "typescript": "^5.8.2",
+    "vitest": "^3.0.8"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
