--- a/package.json
+++ b/package.json
@@ -18,32 +18,34 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
-    "@nuxt/image": "1.9.0",
-    "@nuxt/ui": "^3.0.0",
-    "@pinia/nuxt": "0.10.1",
-    "@vueuse/nuxt": "12.8.2",
-    "nuxt": "^3.16.0",
+    "@nuxt/image": "^1.10.0",
+    "@nuxt/ui": "^3.0.1",
+    "@pinia/colada": "^0.14.2",
+    "@pinia/colada-nuxt": "0.1.1",
+    "@pinia/nuxt": "^0.10.1",
+    "@vueuse/nuxt": "^13.0.0",
+    "nuxt": "^3.16.1",
     "pinia": "^3.0.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@iconify-json/lucide": "^1.2.30",
-    "@nuxt/devtools": "^2.3.0",
+    "@iconify-json/lucide": "^1.2.33",
+    "@nuxt/devtools": "^2.3.2",
     "@nuxt/eslint": "^1.2.0",
     "@nuxt/test-utils": "^3.17.2",
-    "@types/node": "^22.13.10",
+    "@types/node": "^22.13.14",
     "@vue/test-utils": "^2.4.6",
-    "eslint": "^9.22.0",
+    "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-prettier": "^5.2.5",
     "happy-dom": "^17.4.4",
     "husky": "^9.1.7",
-    "playwright-core": "^1.51.0",
+    "playwright-core": "^1.51.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "typescript": "^5.8.2",
-    "vitest": "^3.0.8"
+    "vitest": "^3.0.9"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
