--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "rindu-starter",
   "private": true,
   "type": "module",
-  "packageManager": "pnpm@10.4.0",
+  "packageManager": "pnpm@10.7.0",
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -12,44 +12,38 @@
     "lint:prettier": "prettier . --check",
     "lint:fix": "lint:eslint --fix && prettier --write --list-different .",
     "lint": "pnpm lint:eslint && pnpm lint:prettier",
-    "check": "pnpm lint && pnpm test && pnpm build",
-    "test": "vitest run",
-    "test:ui": "vitest --ui",
-    "test:coverage": "vitest run --coverage"
+    "check": "pnpm lint && pnpm build"
   },
   "dependencies": {
     "@nuxt/image": "^1.10.0",
-    "@nuxt/ui": "^3.0.1",
-    "@pinia/colada": "^0.14.2",
-    "@pinia/colada-nuxt": "0.1.1",
-    "@pinia/nuxt": "^0.10.1",
-    "@vueuse/nuxt": "^13.0.0",
-    "nuxt": "^3.16.1",
-    "pinia": "^3.0.1"
+    "@nuxt/ui": "^3.1.1",
+    "@pinia/nuxt": "^0.11.0",
+    "@vueuse/nuxt": "^13.2.0",
+    "nuxt": "^3.17.3",
+    "pinia": "^3.0.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.0",
-    "@commitlint/config-conventional": "^19.8.0",
-    "@iconify-json/lucide": "^1.2.33",
-    "@nuxt/devtools": "^2.3.2",
-    "@nuxt/eslint": "^1.2.0",
-    "@nuxt/test-utils": "^3.17.2",
-    "@types/node": "^22.13.14",
-    "@vue/test-utils": "^2.4.6",
-    "eslint": "^9.23.0",
-    "eslint-config-prettier": "^10.1.1",
-    "eslint-plugin-prettier": "^5.2.5",
-    "happy-dom": "^17.4.4",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@iconify-json/lucide": "^1.2.43",
+    "@nuxt/devtools": "^2.4.1",
+    "@nuxt/eslint": "^1.3.1",
+    "@types/node": "^22.15.18",
+    "eslint": "^9.26.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.0",
     "husky": "^9.1.7",
-    "playwright-core": "^1.51.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
-    "typescript": "^5.8.2",
-    "vitest": "^3.0.9"
+    "typescript": "^5.8.3"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "sharp"
+      "@tailwindcss/oxide",
+      "esbuild",
+      "sharp",
+      "unrs-resolver",
+      "vue-demi"
     ]
   }
 }
